2008-10-22  Chong Yidong  <cyd@stupidchicken.com>

	* frame.el (make-frame-command): Doc fix.  Use display-graphic-p.

	* thingatpt.el (sexp-at-point, symbol-at-point, number-at-point)
	(list-at-point): Add docstrings.

	* dired.el (dired-get-marked-files, dired-map-over-marks): Doc
	fixes.

	* dired-aux.el (dired-do-create-files): Doc fix.

2008-10-22  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* version.el (emacs-version): Change '*Step' to 'NS' for consistency
	with other documentation.

2008-10-22  Juanma Barranquero  <lekktu@gmail.com>

	* replace.el (how-many): Fix typo in docstring.
	Reported by Leo <sdl.web@gmail.com>.

2008-10-22  Glenn Morris  <rgm@gnu.org>

	* international/mule-cmds.el (universal-coding-system-argument):
	Check for C-g.  (Bug#1205)

2008-10-22  Kenichi Handa  <handa@m17n.org>

	* international/characters.el: Don't setup
	find-word-boundary-function-table.
	(next-word-boundary-han, next-word-boundary-kana): Delete them.
	(word-combining-categories, word-separating-categories): Adjusted
	to the change of the docstrings.

2008-10-21  Chong Yidong  <cyd@stupidchicken.com>

	* simple.el (region-active-p): Doc fix.

2008-10-20  Eli Zaretskii  <eliz@gnu.org>

	* subr.el (apply-partially): Move from here...

	* simple.el (apply-partially): ...to here.

2008-10-20  Andreas Schwab  <schwab@suse.de>

	* subr.el (split-string-and-unquote): Simplify regexp.

2008-10-20  Eli Zaretskii  <eliz@gnu.org>

	* subr.el (top-level): Require `cl' when compiling.

2008-10-20  David Reitter <david.reitter@gmail.com>

	* info.el (Info-mode): Do not remove an existing header line if
	`Info-use-header-line' is nil.

2008-10-19  Juri Linkov  <juri@jurta.org>

	* isearch.el (isearch-query-replace, isearch-query-replace-regexp):
	Add arg `delimited' as in `query-replace' for the case when
	isearch-allow-scroll=t and the user types C-u M-%.  Doc fix.
	Add more indicators to the prompt ("word" and "in region").

	* replace.el (query-replace, query-replace-regexp)